# speed_sensor

./: .gitignore  .gitignore.txt  .gitmodules  LCSC_Bestellung_01_Juni21.xlsx  LCSC_Bestellung_01_Mai21.xlsx  LCSC_Exported_20210428_030935.csv  LCSC_Exported_20210428_030938.csv  LCSC_Exported_20210428_030939.csv  README.md  cd of this folder.txt  myparts.lib
Datasheets/04_referenceDesign_cc2570_swrc225/: CC257X_EM_discrete.pcb  CC257X_EM_discrete.scm  CC257X_EM_discrete_partlist.xls  NCdrill.spl  Readme.txt  assycomp.spl  assysold.spl  drill.spl  gerber.rep  l1.spl  l2.spl  l3.spl  l4.spl  pastcomp.spl  pastsold.spl  silkcomp.spl  silksold.spl  stopcomp.spl  stopsold.spl
Datasheets/04_referenceDesign_cc2570_swrc225/Report/: bom.rep  drc.rep  erc.rep  gerber.rep  parts_list.rep  pnp_comp.rep  pnp_sold.rep  unused_components.rep
KiCad/: CC257X.lib  Nils_KiCADLibrary.lib  Speed_sensor  Speed_sensor-cache.lib  Speed_sensor-rescue.lib  Speed_sensor.kicad_pcb  Speed_sensor.kicad_pcb-bak  Speed_sensor.net  Speed_sensor.pro  Speed_sensor.sch  Speed_sensor.sch-bak  Speed_sensor.xml  Speed_sensor_BOM_custom.xlsx  _autosave-Speed_sensor.kicad_pcb  ant_module.sch  fp-info-cache  fp-lib-table  power_circuit.sch  power_circuit.sch-bak  sym-lib-table
KiCad/gerber/: Speed_sensor-B_Cu.gbr  Speed_sensor-Edge_Cuts.gbr  Speed_sensor-F_Cu.gbr  Speed_sensor-F_Mask.gbr  Speed_sensor-F_Paste.gbr  Speed_sensor-F_SilkS.gbr  Speed_sensor-In1_Cu.gbr  Speed_sensor-In2_Cu.gbr  Speed_sensor-NPTH.drl  Speed_sensor-PTH.drl
KiCad/ul_CC2570RHAR/KiCAD/2021-04-24_20-49-08/footprints.pretty/: CC2570RHAR.kicad_mod
Software/Matlab/: read_log_data_xyz.m  sensor_signal_sim.slx  wheel_orientation_estimation.slx  wheel_orientation_estimation.slx.original
Software/Matlab/slprj/_cgxe/sensor_signal_sim/: sensor_signal_sim_Cache.mat
Software/Matlab/slprj/_cgxe/wheel_orientation_estimation/: wheel_orientation_estimation_Cache.mat
Software/Matlab/slprj/_jitprj/: 35F1M7IEu4IA84Lt1SYxdC.mat  7FSmTG9ePu9PjTIu37fwIG.mat  DkGJQSAFOeRAr9z9J54fEG.mat  Nfa3AhFE6qlWzhXA1YvWqD.mat  Ruz62PbEbfauQRm3tW9nQD.l  Ruz62PbEbfauQRm3tW9nQD.mat  hQpmVoYhICwMVJC5mBfNdD.l  hQpmVoYhICwMVJC5mBfNdD.mat  jitEngineAccessInfo.mat  jzcEUqZ3Gkprvk4K0kqwDC.mat  mvydv8XB8VbM5FYouJPE1E.l  mvydv8XB8VbM5FYouJPE1E.mat  qwfOZS0H9iqEbjKoaSA1X.mat  s3ZosmXXcnuOw7vhXBXkSfH.mat  sCFRI4ggMVhyzI59PBDTkRF.mat  sCMt6ta0fpyVcnE8cY4cqeC.l  sCMt6ta0fpyVcnE8cY4cqeC.mat  sHvvrZO1qvovOylOjzDqeHD.l  sHvvrZO1qvovOylOjzDqeHD.mat  sNR5YKKPO5i6YF8YwW1yj5D.l  sNR5YKKPO5i6YF8YwW1yj5D.mat  saKRlvDmpxz9CbWlGtZU8XD.l  saKRlvDmpxz9CbWlGtZU8XD.mat  sadNjjJFVmWLxLmzmby05HB.l  sadNjjJFVmWLxLmzmby05HB.mat  sbRzAJaBmKKj7vNpa2gAjaC.l  sbRzAJaBmKKj7vNpa2gAjaC.mat  scXz9zUaU7IvM3gFs0Ex3KF.l  scXz9zUaU7IvM3gFs0Ex3KF.mat  sdxban6eqvl84D9Cjz10Mi.l  sdxban6eqvl84D9Cjz10Mi.mat  sgGivvxt8aVRcCWXAlKx1jE.l  sgGivvxt8aVRcCWXAlKx1jE.mat  sktaeTLsHW3MxNkB22RX54E.mat  spRwiZgc0weoKYMTDvcqp1E.l  spRwiZgc0weoKYMTDvcqp1E.mat  tZIxps9mJNWCjZIu6BV31B.l  tZIxps9mJNWCjZIu6BV31B.mat  trguxf44b58qkrrNgHyPHF.mat  u3H8ojlfKdDUybpVVhVNaD.l  (+3 more)
Software/Matlab/slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  s3ZosmXXcnuOw7vhXBXkSfH.mat  sCFRI4ggMVhyzI59PBDTkRF.mat  sCMt6ta0fpyVcnE8cY4cqeC.mat  sHvvrZO1qvovOylOjzDqeHD.mat  sNR5YKKPO5i6YF8YwW1yj5D.mat  sZbEhRaDMHCcKtwF3Z3IuAH.mat  saKRlvDmpxz9CbWlGtZU8XD.mat  sadNjjJFVmWLxLmzmby05HB.mat  sbRzAJaBmKKj7vNpa2gAjaC.mat  scXz9zUaU7IvM3gFs0Ex3KF.mat  sdxban6eqvl84D9Cjz10Mi.mat  sfhWKGfvIZjt6GaZj2YZBZD.mat  sgGivvxt8aVRcCWXAlKx1jE.mat  sktaeTLsHW3MxNkB22RX54E.mat  spRwiZgc0weoKYMTDvcqp1E.mat  zEdlNDCFW7NXc0bskzOGKC.mat
Software/Matlab/slprj/_sfprj/precompile/: 0YkOG0WICMgS3DkZTOYsVG.mat  1QeDGorQLJice3wVVXdeoH.mat  43q9t5HAzYClHF3YLWTP3.mat  6HNN9OsDHl3fePUaJKQciC.mat  Dt52PizB489xHoeHsHlbcB.mat  KOnWxZf2b5rSxYRkXnY96E.mat  MrHT7Q2DCHh1lIhzxwBRRG.mat  NGMyZ2hC7rGfp63akZtOyF.mat  NKL3nfpgjv7J0iwQ8BPKtD.mat  VaMCD9uab5IJDSSEKTaqh.mat  autoInferAccessInfo.mat  dXtNVWpdgwN8AaOJO22aBH.mat  kFemPUNjW90zg6eKImTAfE.mat  skWuXTayNjJwiJnebufgNC.mat  vrZsHm0RFEVvk8osJG7RpB.mat  yZatj5EfZJriFOtDW0iyyE.mat
Software/Matlab/slprj/_sfprj/wheel_orientation_estimation/: amsi_serial.mat
Software/Matlab/slprj/_sfprj/wheel_orientation_estimation/_self/sfun/info/: binfo.mat
Software/Workspace/: CMakeLists.txt  Speed_Sensor_workspace.code-workspace
Software/Workspace/device/components/drivers_meine/: lis2dh12_spi.c  lis2dh12_spi.h
Software/Workspace/device/components/softdevice/ANT_s212_nrf52_7.0.1/: ANT_s212_nrf52_7.0.1_readme.txt
Software/Workspace/device/components/softdevice/ANT_s212_nrf52_7.0.1/ANT_s212_nrf52_7.0.1.API/include/: nrf_sdm.h
Software/Workspace/device/components/softdevice/s212/hex/: ANT_s212_nrf52_7.0.1.hex
Software/Workspace/device/config/nrf52832/config/: sdk_config.h
Software/Workspace/device/integration/nrfx/: nrfx_config.h
Software/Workspace/device/integration/nrfx/legacy/: nrf_drv_spi.h
Software/Workspace/device/modules/nrfx/mdk/: nrf52832_xxaa.ld
Software/Workspace/src/: main.c
Software/emb_studio/: Executable_1.emProject  Executable_1.emSession  nrf52.svd
mylib.pretty/: 2450AT18D0100E.kicad_mod  LGA-12_2x2mm_P0.5mm_Handsolder.kicad_mod  QFN-48-1EP_6x6mm_P0.4mm_EP4.6x4.6mm_Handsolder.kicad_mod  SMD-2016_4P.kicad_mod  TestPoint_2Pads_Pitch1mm_Drill0.4mm.kicad_mod  Texas_DSBGA-20_1.6x2.0mm_Layout4x5_P0.4mm.kicad_mod  USB_C_Receptacle_Palconn_UTC16-G_breitePins.kicad_mod
ul_BQ24040DSQR/KiCAD/2021-04-30_13-20-40/: 2021-04-30_13-20-40.lib
ul_BQ24040DSQR/KiCAD/2021-04-30_13-20-40/footprints.pretty/: BQ24040DSQR.kicad_mod  BQ24040DSQR_breitePins.kicad_mod
ul_ST1PS02CQTR/KiCAD/2021-04-30_13-59-34/: 2021-04-30_13-59-34.lib
ul_ST1PS02CQTR/KiCAD/2021-04-30_13-59-34/footprints.pretty/: ST1PS02CQTR.kicad_mod  ST1PS02CQTR_breitePins.kicad_mod  ST1PS02CQTR_breitePins_zugross.kicad_mod
